
0.8 [dev]

- REFACTORING IN PRGRESS! (no GUI yet, amongst other things)
- A public event API for triggering page state changes and being notified of them.
- The plugin now is a real JS object so theoretically you could have several PolyPage's co-existing on one html page.
- PolyPage now follows the jQuery standard and is fully chainable, and scoped, in most cases $(document).polypage() is fine.

0.7

* Officially note the MooTools branch.
* Added a test suite around the public API, this was long overdue, sorry.
* Pulled in some of Yoan's changes to allow #state tiggering on 'a' and 'form' elements.
* Started a skins folder based on Rich's suggestion, if you've got any good ones I would love to have them in the repo.


0.6

* PolyPage can now be intialized on a jQuery collection using the $(selector).polypage() syntax. the matched elements are used as the container for the navigation controls. This is now the recommended way to initialize jQuery although the $.polypage.init() method still works for backwards compatibility at the moment. (Thanks to Phil Oye)
* Some refactoring of cookie support and setState();
* Fixes a bug where setting a cookie and a hash in the url to both be on would cause an infinite loop of toggling.
* Added a customizable label to make it clear the toggles are page states, use the 'label' option to change. (Thanks to Phil Oye)
* Increased the specificity of the CSS selectors so they are unlikely to be affected by other page styling.
* If no PolyPage elements exist on a page then we now avoid adding an empty toggle box to the page. (thanks to Phil Oye for the suggestion)
* The 'pp' classname prefix can now be changed via the 'prefix' option.
* The classname separator can now be changed via the 'separator' option. 


0.5.1

* Upgraded to work with jQuery 1.3.x
* Fixed a CSS typo


0.5

* Regex improvements
* Support for numbers in state names.
* Safari 3 support.