@@ -20,6 +20,13 @@
         $(this).data('polypage', new $.polypage(this, opts)); 
     });
   };
+  
+  $.fn.polypageNavBar = function(opts) {
+    return this.each(function() {
+      (opts = opts || {}).bindTo = opts.bindTo || this;
+      $(this).data('polypageNavBar', new $.polypage.navBar(this, opts)); 
+    });
+  };
 
   $.polypage = function(scope, options) {
     this.scope = $(scope);
@@ -29,8 +36,7 @@
   
   $.polypage.DEFAULTS = {
     prefix: 'pp',
-    separator: '_',
-    label: "Page States:"
+    separator: '_'
   };
   
   $.polypage.prototype = {
@@ -132,7 +138,7 @@
       return $("*[class*='"+this.options.prefix+this.options.separator+"']", this.scope);
     },
     
-    pageHasPPElements: function() {
+    hasElements: function() {
       return this.findAll().length>0
     },
 
@@ -157,11 +163,13 @@
       return eval(str);
     },
     
-    // alphabeticalStateNames: function(){
-    //   var ret = [];
-    //   for(var state in this.states) {  ret.push(state); };
-    //   return ret.sort();
-    // },
+    alphabeticalStates: function(){
+      var alphaStates = [], ret = [];
+      for(var state in this.states) { alphaStates.push(state) }
+      alphaStates = alphaStates.sort();
+      for(var state in alphaStates) { ret.push({name:alphaStates[state], value:this.states[alphaStates[state]]}); };
+      return ret
+    },
 
     // buildOptionsBar: function(elems){
     //   if(!this.pageHasPPElements()) return;
@@ -195,7 +203,63 @@
     //     }
     //   });
     // }
-
+  };
+  
+  $.polypage.navBar = function(scope, options) {
+    this.scope = $(scope);
+    this.options = $.extend($.polypage.navBar.DEFAULTS, options||{});
+    this.init();
+  };
+  
+  $.polypage.navBar.DEFAULTS = {
+    className: 'pp_options',
+    label: "Page States:"
+  };
+  
+  $.polypage.navBar.prototype = {
+    init: function(){
+      this.bindWithPolypage();
+      this.redraw();
+    },
+    
+    bindWithPolypage: function(){
+      this.polypage = $(this.options.bindTo).data('polypage');
+      if(this.polypage===undefined)
+        throw "A polypage nav bar must be bound to a polypage enabled element, try setting the 'bindTo' option.";
+    },
+    
+    redraw: function(){
+      this.undraw();
+      if(!this.needsOptionBar()) return;
+      this.draw();
+    },
+    
+    draw: function(){
+      this.scope.append('<div id="'+this.options.className+'"><p>'+this.options.label+'</p><ul></ul></div>');
+      var states = this.states();
+      for(var index in states) {
+        var state = states[index];
+        var humanStateName = state.name.replace(this.separator(),' ');
+        var className = state.value ? 'on' : 'off'
+        $('#pp_options ul').append('<li><a href="#'+state.name+'" id="pp_state_switch_'+state.name+'" class="'+className+'">'+humanStateName+'</a></li>');
+      }
+    },
+    
+    undraw: function(){
+      this.scope.find('.'+this.options.className).remove();
+    },
+    
+    needsOptionBar: function(){
+      return this.polypage.hasElements();
+    },
+    
+    states: function(){
+      return this.polypage.alphabeticalStates();
+    },
+    
+    separator: function(){
+      return this.polypage.options.separator;
+    },
   };
   
 })(jQuery);
