@@ -58,6 +58,7 @@
   <!-- Setup -->
   <script type="text/javascript" charset="utf-8">
       $('#dom').polypage();
+      $('body').polypageNavBar({bindTo:'#dom'});
   </script>
   
   <!-- Specs -->
